# vibecoding

./: .gitignore  ACKNOWLEDGEMENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  requirements-dev.txt  requirements-docs.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.rst  threat_model.md  threat_model.tc.json
docs/api/: greeting.rst  quote_provider.rst  quote_service.rst  stats.rst  telemetry.rst  time_of_day.rst
scripts/: build_arch.py  build_dfd.py  build_tc_json.py  dev.sh
src/: greeting.py  quote_provider.py  quote_service.py  stats.py  telemetry.py  time_of_day.py
tests/: scale_test.py  test_benchmark.py  test_greeting.py  test_greeting_extended.py  test_integration.py  test_quote_provider.py  test_quote_provider_extended.py  test_quote_service.py  test_quote_service_extended.py  test_security.py  test_stats_extended.py  test_telemetry.py  test_telemetry_extended.py  test_time_of_day.py
worker/: pyproject.toml  schema.sql  wrangler.toml
worker/src/: cf_telemetry.py  entry.py  local_server.py  quote_provider.py  time_of_day.py
worker/tests/: test_worker.py
